XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.4.0-rc1
    • Qt Creator 4.4.0-beta1
    • All Other Issues
    • None
    • Windows 7, Qt 5.9.1
    • a54cba428ac3461c11cf0659c60d20503a688309

      • Start Qt Creator
      • Start a debugging session of any kind (can even be "attach to running debug server with an invalid server)
      • Terminate the debugging session
      • Quit

      The RunControl is terminated using deleteLater:

      1   ProjectExplorer::Internal::RunControlPrivate::setState                                                                                        runconfiguration.cpp 1280 0x7fea513d3d9 
      2   ProjectExplorer::Internal::RunControlPrivate::initiateFinish                                                                                  runconfiguration.cpp 926  0x7fea513e549 
      3   ProjectExplorer::RunControl::initiateFinish                                                                                                   runconfiguration.cpp 702  0x7fea513a8e7 
      4   ProjectExplorer::Internal::AppOutputPane::closeTab                                                                                            appoutputpane.cpp    601  0x7fea520289f 
      5   ProjectExplorer::Internal::AppOutputPane::closeTabs                                                                                           appoutputpane.cpp    553  0x7fea5200ecf 
      6   ProjectExplorer::ProjectExplorerPlugin::aboutToShutdown                                                                                       projectexplorer.cpp  1635 0x7fea4f8751e 
      7   ExtensionSystem::Internal::PluginSpecPrivate::stop                                                                                            pluginspec.cpp       1068 0x7fead8bcc69 
      8   ExtensionSystem::Internal::PluginManagerPrivate::loadPlugin                                                                                   pluginmanager.cpp    1415 0x7fead8a0fb1 
      9   ExtensionSystem::Internal::PluginManagerPrivate::stopAll                                                                                      pluginmanager.cpp    937  0x7fead8a393a 
      10  ExtensionSystem::Internal::PluginManagerPrivate::shutdown                                                                                     pluginmanager.cpp    1272 0x7fead8a04c5 
      11  ExtensionSystem::PluginManager::shutdown                                                                                                      pluginmanager.cpp    427  0x7fead89f235 

      All the plugins are terminated, then the RunControl dtor is called. This dtor uses singleton instances which are already destroyed.

      See workaround attempts here and here.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            orgads Orgad Shaneh
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes